2011-08-03 Roman
- FIX:Protocol.SelfSystem: Input protocol is some fixed for correct error get and some other errors process.


2011-08-02 Roman
- SYS, DAQ: User API functions is appended by Obj.nodePath() and SYS.DAQ["Modul"]["Controller"]["Parameter"]["Attribute"].arch().
- SYS: TiB, PiB, EiB, ZiB and YiB is added to TSYS::cpct2str() function.
- Transport.Serial, Transport.Sockets and Transport.SSL: Traffic absolute counter type is changed from float to uint64_t.


2011-07-29 Roman
- SYS: Exponential 'e' float numbers write form is added to TSYS::real2str().
- UI.WebVision: Exponential 'e' mode is added to float point arguments of primitive 'Text'.
- UI.QTCfg, UI.Vision: Dialog window size adjust is improved for expand from minimum base.
- UI.VCAEngine: The primitive's 'ElFigure' attribute 'elLst' context help is fixed and appended.
- UI.Vision: Context help field of fulltext edit dialog is improved for display big helps.
- UI.Vision, UI.WebVision: Full resource's format is made to figure's "fill" field background image of primitive "ElFigure".


2011-07-28 Roman
- FIX:Archive.FSArch: Remove values *.info files with archive file remove is fixed, for unpacked archive files.


2011-07-27 Roman
- SYS, Archives, Archive.FSArch, Archive.DBArch: Interface timeout STD_INTERF_TM is added and used.
- FIX:Archive.FSArch: Try block is added to archives check task. Time limit is added to archives check task.
- FIX:UI.QTCfg: Big group items slow removing is fixed.
- FIX:DB.FireBird, DB.MySQL, DB.PostgreSQL: Check to individual element's text translation condition is added to fieldGet().
- FIX:DAQ.ModBus, DAQ.BFN: Full controller alarm generation is fixed to encode connection error for replace symbol ':' to '='.
- UI.VCAEngine: Select link type "wdg:" is disabled by no realized yet for direct set reason.
- !!:UI.Vision, UI.WebVision: Logarithmic vertical scale is realized for primitive "Diagram" standard view.


2011-07-26 Roman